2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/calcsize.c: Print estimate to STDERR.
	* client-src/sendsize.c (generic_calc_estimates): Read calcsize result,
	  and send it to amandad. Write debuging message.

2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>
        Patch by Franz G. Fischer

	* server-src/conffile.c: Adds a value type LONG and a val_t.l long
	  union member and changes get_number() to return long and
	  get_simple() to fill val_t.l if called for a long value.  The
	  get_simple() calls have been changed to LONG for typetype_t.blocksize
	  typetype_t.length, typetype_t.filemark, holdingdisk_t.disksize and
	  holdingdisk_t.chunksize.

2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amdump.sh.in: Redirect in append mode.
	* server-src/driver.c: Set stdout and stderr to not buffered.
	* server-src/planner.c: Set stderr to not buffered.
	  Print 'setup_estimate:' on one line.
	* server-src/amstatus.pl.in: Parse new 'setup_estimate:' line.

2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/calcsize.c: Improve estimate for sparse file and count
	  space for filenames.

2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c: Improve message if no incremental estimate.

2005-01-23  Stefan G. Weichinger <monitor@oops.co.at> 
	Patch by Jon LaBadie <jon@jgcomp.com>

	* changer-src/chg-multi.sh.in: New header to explain the meaning of
	  the "multi" in "chg-multi".

2004-12-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Christopher Pascoe <c.pascoe@itee.uq.edu.au>

	* common-src/match.c (match_glob, match_tar): Don't amfree(regex)
	  before calling error().

2004-11-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c (startaflush): Use ALGO_SMALLEST if nothing fit.

2004-11-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c: Typo.
