@@ -1,5 +1,9 @@
 2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
+	* server-src/driver.c: Print the chunksize to the log.
+
+2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
 	* client-src/calcsize.c: Print estimate to STDERR.
 	* client-src/sendsize.c (generic_calc_estimates): Read calcsize result,
 	  and send it to amandad. Write debuging message.
